MET-6262 move index record to RecordCallable